# simple-game

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/simple_game/: __init__.py  main.py
src/simple_game/game/: player.py  settings.py
src/simple_game/tests/: conftest.py  test_player.py
