[project]
name = "simple-game"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "iss_e_jeck", email = "iss.e.jeck@gmail.com" }
]
dependencies = [
    "pygame>=2.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
main = "python src/simple_game/main.py"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/simple_game"]
