[project]
name = "simple-game"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "iss_e_jeck", email = "iss.e.jeck@gmail.com" }
]
dependencies = [
    "pygame>=2.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"
license-expression = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.rye.scripts]
main = "python -m simple_game.main"
test = "pytest --maxfail=1 --disable-warnings -q --cov=simple_game"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/simple_game"]
